sandc/test/fixtures/astRegression/shouldFail/productions/file/UseBeforeImport.sand
use java.util.ArrayList;

import java.util.List;

pub class UseBeforeImport {
    
}